test/conformance/chainsaw/policy-validation/cluster-policy/invalid-pod-security-rule/policy-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-1
spec:
  background: true
  rules:
  - name: baseline
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Enforce
      podSecurity:
        level: baseline
        version: latest
        exclude:
        - controlName: "/proc Mount Type"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.procMount"
