test/conformance/chainsaw/policy-validation/cluster-policy/invalid-pod-security-rule/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: invalid-pod-security-rule
spec:
  concurrent: false
  steps:
  - name: Apply the first policy
    try:
    - script:
        content: kubectl apply -f policy-1.yaml
        check:
          ($error != null): true
          (contains($stderr, 'denied the request')): true
          (contains($stderr, 'values is required')): true
  - name: Apply the second policy
    try:
    - script:
        content: kubectl apply -f policy-2.yaml
        check:
          ($error != null): true
          (contains($stderr, 'denied the request')): true
          (contains($stderr, 'restrictedField is required')): true
